feat: Update personal information and skills in About component; add new projects and achievements; enhance resume details
- Updated personal details in the About component, including name, job role, experience, and address.
- Revised skills list to reflect current expertise and added new skills.
- Added new projects showcasing electrical engineering and software development.
- Updated achievements to include recent recognitions and experiences.
- Revised certifications to include relevant courses and training.
- Updated contact information with new email and phone number.
- Enhanced resume details to reflect current education and work experience.
- Added new images for projects in the public/images directory.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rafi Ahmed Patel - AI/ML Engineer & Research Scientist</title>
+    <title>Mohammad Robiul Kabir - AI/ML Engineer & Research Scientist</title>
     <meta name="description" content="Portfolio of Rafi Ahmed Patel - AI/ML Engineer with expertise in Deep Learning, NLP, Computer Vision and Medical AI research. MSc AI graduate with nearly 2 years of experience." />
     <meta name="author" content="Rafi Ahmed Patel" />
 
-    <meta property="og:title" content="Rafi Ahmed Patel - AI/ML Engineer Portfolio" />
-    <meta property="og:description" content="MSc AI graduate with nearly 2 years of experience, recognised for winning NLP competition and developing impactful AI projects." />
+    <meta property="og:title" content="Mohammad Robiul Kabir - Electrical Engineer" />
+    <meta property="og:description" content="Bsc AI graduate with nearly 2 years of experience, recognised for winning NLP competition and developing impactful AI projects." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
