fix: update author details in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohammad Robiul Kabir - AI/ML Engineer & Research Scientist</title>
     <meta name="description" content="Portfolio of Mohammad Robiul Kabir - Electrical & Electronic Engineer with expertise in Solar System, Digital Ad operation and Mathematics. MSc student in Computer Simulation in Science." />
-    <meta name="author" content="Rafi Ahmed Patel" />
+    <meta name="author" content="Mohammad Robiul Kabir" />
 
     <meta property="og:title" content="Mohammad Robiul Kabir - Electrical Engineer" />
     <meta property="og:description" content="Bsc in EEE graduate with nearly 4 years of job experiences" />
