--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohammad Robiul Kabir - AI/ML Engineer & Research Scientist</title>
-    <meta name="description" content="Portfolio of Rafi Ahmed Patel - AI/ML Engineer with expertise in Deep Learning, NLP, Computer Vision and Medical AI research. MSc AI graduate with nearly 2 years of experience." />
-    <meta name="author" content="Rafi Ahmed Patel" />
+    <meta name="description" content="Portfolio of Mohammad Robiul Kabir - Electrical & Electronic Engineer with expertise in Solar System, Digital Ad operation and Mathematics. MSc student in Computer Simulation in Science." />
+    <meta name="author" content="Mohammad Robiul Kabir" />
 
     <meta property="og:title" content="Mohammad Robiul Kabir - Electrical Engineer" />
-    <meta property="og:description" content="Bsc AI graduate with nearly 2 years of experience, recognised for winning NLP competition and developing impactful AI projects." />
+    <meta property="og:description" content="Bsc in EEE graduate with nearly 4 years of job experiences" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@rafipatel_rafi" />
+    <meta name="twitter:site" content="@robiul_kabir" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
